NATTQA-ENV/force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__Field__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Field__c</fullName>
    <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__TargetObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Discount (%)</fullName>
            </value>
            <value>
                <fullName>Discount (Amt)</fullName>
            </value>
            <value>
                <fullName>Markup (%)</fullName>
            </value>
            <value>
                <fullName>Markup (Amt)</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
                <label>Target (%)</label>
            </value>
            <value>
                <fullName>Norm</fullName>
                <label>Norm (%)</label>
            </value>
            <value>
                <fullName>Floor</fullName>
                <label>Floor (%)</label>
            </value>
            <value>
                <fullName>Explanation</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Standard_Option_Sales__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Special_Options_Sales__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Unit_Base_Price_Sales__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Special_Requirement_Sales__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Extended_Warranty_Sales__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Standard_Option_Cost__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Cost_Unit_Base_Price__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Extended_Warranty_Cost__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Special_Requirement_Cost__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Special_Options_Cost__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_Job_Cost__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_Commission__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_Certification__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_Check_Out__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_Freight_AppliedCost__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_Contract_Obligation__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_Spare_Parts__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_ORBCOMM_RI_AppliedCost__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_ORBCOMM_AppliedCost__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_Extended_Applied_Cost__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Total_Extended_AppliedSales__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>