NATTQA-ENV/force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__Rule__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Rule__c</fullName>
    <description>Price rule running this action.</description>
    <inlineHelpText>Price rule running this action.</inlineHelpText>
    <label>Rule</label>
    <referenceTo>SBQQ__PriceRule__c</referenceTo>
    <relationshipLabel>Price Actions</relationshipLabel>
    <relationshipName>PriceActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>