NATTQA-ENV/force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__SourceLookupField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SourceLookupField__c</fullName>
    <description>API Name of the field to return from the row matching the condition.</description>
    <inlineHelpText>API Name of the field to return from the row matching the condition.</inlineHelpText>
    <label>Source Lookup Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBQQ__Value__c</fullName>
            </value>
            <value>
                <fullName>NATT_Price__c</fullName>
            </value>
            <value>
                <fullName>NATT_Standard_Features__c</fullName>
            </value>
            <value>
                <fullName>NATT_Amount__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_JDE_Product_Number__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_LNBaan_Product_Number__c</fullName>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>UserId</fullName>
            </value>
            <value>
                <fullName>NATT_Account_Team_Member_First_Last_Name__c</fullName>
            </value>
            <value>
                <fullName>NATT_Months__c</fullName>
            </value>
            <value>
                <fullName>NATT_Hours__c</fullName>
            </value>
            <value>
                <fullName>NATT_Deductible__c</fullName>
            </value>
            <value>
                <fullName>NATT_Serial_Number__c</fullName>
            </value>
            <value>
                <fullName>NATT_Original_Price__c</fullName>
            </value>
            <value>
                <fullName>NATT_Model_Number__c</fullName>
            </value>
            <value>
                <fullName>Unit_Price__c</fullName>
            </value>
            <value>
                <fullName>CTM_Unit_Price__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__PriorQuantity__c</fullName>
            </value>
            <value>
                <fullName>CTBR_Unit_Price_BRL__c</fullName>
            </value>
            <value>
                <fullName>CTBR_Unit_Price_USD__c</fullName>
            </value>
            <value>
                <fullName>CTBR_Price__c</fullName>
            </value>
            <value>
                <fullName>CTBR_Months__c</fullName>
            </value>
            <value>
                <fullName>CTBR_Hours__c</fullName>
            </value>
            <value>
                <fullName>CTBR_Deductible__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>