NATTQA-ENV/force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__SourceVariable__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SourceVariable__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Summary variable that sources value for this action.</description>
    <inlineHelpText>Summary variable that sources value for this action.</inlineHelpText>
    <label>Source Variable</label>
    <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
    <relationshipLabel>Price Actions (Source)</relationshipLabel>
    <relationshipName>SourcePriceActions</relationshipName>
    <type>Lookup</type>
</CustomField>