NATTQA-ENV/force-app/main/default/objects/SBQQ__PriceAction__c/fields/Source_Variable_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Variable_External_ID__c</fullName>
    <formula>SBQQ__SourceVariable__r.External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Variable External ID</label>
    <type>Text</type>
</CustomField>